--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "eligibility-checker",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/asi_logo.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/asi_logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,13 +17,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/asi_logo.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.eligibilitychecker.asi"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/asi_logo.png"
     },
     "extra": {
       "eas": {
