--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.2.9",
     "expo": "~52.0.42",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -22,7 +23,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "^3.16.5",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13"
